@@ -28,7 +28,7 @@ Dist::Zilla::Plugin::Test::CPAN::Changes = 0.012
 Dist::Zilla::Plugin::Test::ChangesHasContent = 0
 Dist::Zilla::Plugin::Test::MinimumVersion = 2.000010
 Dist::Zilla::Plugin::PodSyntaxTests = 5.040
-Dist::Zilla::Plugin::PodCoverageTests = 5.040
+Dist::Zilla::Plugin::Test::Pod::Coverage::TrustMe = 0
 Dist::Zilla::Plugin::Test::PodSpelling = 2.006003
 ;Dist::Zilla::Plugin::Test::Pod::LinkCheck = 0
 Dist::Zilla::Plugin::Test::Pod::No404s = 1.003
@@ -161,8 +161,7 @@ Test::CPAN::Meta = 0
 Test::EOL = 0
 Test::MinimumVersion = 0
 Test::NoTabs = 0
-Test::Pod::Coverage = 1.08
-Pod::Coverage::TrustPod = 0
+Test::Pod::Coverage::TrustMe = 0
 Test::Pod = 1.41
 Test::Mojibake = 0
 
@@ -172,9 +171,7 @@ Test::Mojibake = 0
 -relationship = requires
 Test::Spelling = 0.19
 Pod::Wordlist = 1.09
-Pod::Coverage::TrustPod = 0
 Test::CPAN::Meta = 0
-Test::Pod::Coverage = 0
 
 [Prereqs / local author tests]
 -phase = develop
@@ -205,11 +202,14 @@ file = share/profiles/github/profile.ini
 root = share/profiles/github
 prefix = share/profiles/default
 
+[FileFinder::Filter / skip_auto_share]
+finder = :InstallModules ; default for [Test::Pod::Coverage::TrustMe]
+skip  = ^share/auto/
+
 [@Author::ETHER]
 ; FIXME: Module.pm in profiles/ does not have parsable pod nor resolvable URIs
 ; It should be ignorable -- these plugins should be updated so they use
 ; FileFinders and Filters, OR simply to prune auto/*
--remove = PodCoverageTests  ; see RT#85709
 -remove = Test::Pod::No404s
 :version = 0.103
 installer = MakeMaker ; for dynamic prereqs
@@ -220,6 +220,7 @@ Test::ReportPrereqs.include[2] = Text::Template
 Test::ReportPrereqs.include[3] = Module::CoreList
 ModuleBuildTiny.static = no ; [CheckBin]
 StaticInstall.mode = off    ; [CheckBin]
+Test::Pod::Coverage::TrustMe.finder = skip_auto_share
 
 [Test::CheckBreaks]
 :version = 0.017
